# neural-network-trading-system

./: README.md  requirements.txt
app/: lstm_model.py  model_backtester.py  rnn_model.py  test_lstm.py  test_rnn.py
app/backend/service_optimizer/: README.md  analyze_service.py  classify_service.py  get_next_service.py  pyproject.toml  requirements.txt  sample_data.py  sample_services.json  services.db  test_forecasting.py  test_ml_engine.py  verify_data.py
app/backend/service_optimizer/app/: db_init.py  main.py  ml_engine.py  models.py  services.db  verify_db.py
app/frontend/service-optimizer-ui/: .env.production  .eslintrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/frontend/service-optimizer-ui/src/: App.tsx  api.ts  types.ts
app/frontend/service-optimizer-ui/src/components/chat/: ChatBox.tsx  predefinedResponses.ts  (+1 more)
app/frontend/service-optimizer-ui/src/styles/: animations.css  globals.css
app/frontend/service-optimizer-ui/src/types/: index.ts
backend/: .env  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/services/: chatbot_service.py  chatgpt.py  earnings.py  greek_flow.py  insider_trading.py  insights.py  job_service.py  market_tide.py  mock_data.py  notification_service.py  premium_flow.py  unusual_whales.py
backend/tests/test_services/: test_insights.py
docs/wireframes/: 00_overview.md  01_navigation.md  02_metrics.md  03_ai_assistant.md
frontend/: package-lock.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: congress-trades-panel.tsx  development-status.tsx  earnings-panel.tsx  footer-section.tsx  greek-flow-panel.tsx  insider-trading-panel.tsx  market-tide-panel.tsx  overview-section.tsx  premium-flow-panel.tsx  theme-provider.tsx
frontend/src/components/dashboard/: JobsDashboard.tsx
frontend/src/components/forms/: JobRequestForm.tsx
frontend/src/components/ui/: card.tsx  use-toast.ts
frontend/src/hooks/: use-toast.ts
frontend/src/layouts/: MainLayout.tsx
src/: __init__.py  analysis.py  config.py  data_collector.py  data_fetcher.py  test_analysis.py  test_data_collection.py  test_trading.py  trading_algorithm.py  visualizer.py
zom-ai-backend/: Dockerfile  fly.toml  investigation_notes.txt  pyproject.toml  requirements.txt  start.sh  test_api.py  test_endpoints.py
zom-ai-backend/app/: main.py
zom-ai-backend/app/services/: ai_analysis.py  stock_data.py  websocket.py
(+24 files in other folders)
