[tool.poetry]
name = "zom-ai-backend"
version = "0.1.0"
description = "Backend for Zom AI stock analysis application"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
python-dotenv = "1.0.0"
requests = "2.31.0"
openai = "0.28.1"
websockets = "12.0"
python-multipart = "0.0.6"
polygon-api-client = "1.14.3"
alpha_vantage = "3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
